--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ android {
             minifyEnabled false
 
             ndk {
-                abiFilters 'armeabi-v7a'
+                abiFilters 'armeabi-v7a','x86_64'
             }
         }
         release {
@@ -36,7 +36,7 @@ android {
             minifyEnabled true
 
             ndk {
-                abiFilters 'armeabi-v7a'
+                abiFilters 'armeabi-v7a','x86_64'
             }
         }
     }
