--- a/quickjs/build.gradle
+++ b/quickjs/build.gradle
@@ -11,7 +11,7 @@ android {
         targetSdkVersion 26
         externalNativeBuild {
             cmake {
-                abiFilters 'armeabi-v7a'
+                abiFilters 'armeabi-v7a','x86_64'
             }
         }
     }
@@ -19,7 +19,7 @@ android {
     buildTypes {
         all {
             ndk {
-                abiFilters 'armeabi-v7a'
+                abiFilters 'armeabi-v7a','x86_64'
             }
         }
         release {
