--- a/player/build.gradle
+++ b/player/build.gradle
@@ -13,7 +13,7 @@ android {
     buildTypes {
         all {
             ndk {
-                abiFilters 'armeabi-v7a'
+                abiFilters 'armeabi-v7a','x86_64'
             }
         }
         release {
